# hcl4s

./: .bazelrc  BUILD  MODULE.bazel  MVNLOCK.json  WORKSPACE  dependencies.yaml  parselog.txt
.github/workflows/: release.yml
codec/: BUILD
codec/src/main/scala/: dsl.scala  (+1 more)
core/: BUILD
examples/: picrust.hcl  resume.hcl  resume.json
examples/bigtest/: combined.hcl  elasticsearch.tmpl  kibana.tmpl  main.hcl  outputs.hcl  variables.hcl
extensions/json/: BUILD
generic/: BUILD
hcl4s/: BUILD  HCLParser.scala  hcl4s.scala
hcl4s/codec/: BUILD  Encoder.scala  ValueEncoder.scala  package.scala
hcl4s/eval/: BUILD  Context.scala  ExprEval.scala  HCLEval.scala  HCLFunction.scala  Scope.scala  ScopeStack.scala  TmplEval.scala  Trace.scala  operations.scala  package.scala
hcl4s/lang/: BUILD  dsl.scala
hcl4s/lang/expr/: Expression.scala  ValueType.scala  operators.scala
hcl4s/lang/struct/: BodyElemT.scala  package.scala
hcl4s/lang/tmpl/: TemplateItem.scala
hcl4s/model/: BUILD  HCLBlock.scala  HCLBody.scala  HCLValue.scala  format.scala
hcl4s/parser/: BUILD  FastparseUtils.scala  IDHelpers.scala  IDHelpers2.scala  Parser.scala  Parser2.scala  ParserImpl.scala  StringSyntax.scala  StringSyntax2.scala  SymHelpers.scala  TemplateParser.scala  TemplateParser2.scala  WSHelpers.scala  helpers.scala  package.scala
hcl4s/util/: BUILD
parser/: BUILD
scripts/: deploy  update_dependencies.sh
test/: BUILD  TestEval.scala  TestUtils.scala
test/parser/: BUILD
test/resources/: picrust.hcl
tools/: BUILD  bazeldist.bzl
tools/build_rules/: prelude_bazel
(+46 files in other folders)
